welcome.lessons.welcome.conditions.Conditions.scala.code
if estFaceMur(Buggle 1) { recule(Biggle 1); } else { avance(Biggle 1) }